Fixed margin-right issue causing scrollbar at the bottom of the screen

--- a/Angular2ASPNET/wwwroot/styles.css
+++ b/Angular2ASPNET/wwwroot/styles.css
@@ -164,6 +164,10 @@
         float: left;
     }
 
+    .navbar-right {
+        margin-right: 0px;
+    }
+
     .image404 {
         width: 100%;
     }
